--- a/index.html
+++ b/index.html
@@ -4,12 +4,59 @@
 <meta charset="UTF-8">
 <title>Voxel Renderer</title>
 <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
 
 <canvas id="gfx"></canvas>
 <div id="fps">FPS: 0</div>
+
+<div id="sliderPanel">
+    <div style="font-weight: bold; font-size: 15px; margin-bottom: 10px;">
+        Debug Menu
+    </div>
+
+    <button id="reloadBtn" style="width: 100%; margin-bottom: 12px;">Reload</button>
+
+    <div style="margin-top: 14px; font-weight: bold;">Hide Walls</div>
+
+
+    <div id="hideWallsGrid">
+        <div></div>
+        <div><input type="checkbox" id="c1"></div>
+        <div></div>
+
+        <div><input type="checkbox" id="c2"></div>
+        <div><input type="checkbox" id="c3"></div>
+        <div><input type="checkbox" id="c4"></div>
+
+        <div></div>
+        <div><input type="checkbox" id="c5"></div>
+        <div></div>
+    </div>
+
+
+
+
+    
+    <label>
+        Slider 1: <span id="s1val">0</span>
+    </label>
+    <input id="slider1" type="range" min="-3.14159265" max="3.14159265" value="0" step="0.01">
+
+    <label>
+        Slider 2: <span id="s2val">0</span>
+    </label>
+    <input id="slider2" type="range" min="-3.14159265" max="3.14159265" value="0" step="0.01">
+
+    <label>
+        Slider 3: <span id="s3val">0</span>
+    </label>
+    <input id="slider3" type="range" min="-3.14159265" max="3.14159265" value="0" step="0.01">
+</div>
+
+
 
 <script type="module" src="main.js"></script>
 
