--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     <label>
         Slider 1: <span id="s1val">0</span>
     </label>
-    <input id="slider1" type="range" min="-3.14159265" max="3.14159265" value="0" step="0.01">
+    <input id="slider1" type="range" min="-2.0" max="2.0" value="0" step="0.0001">
 
     <label>
         Slider 2: <span id="s2val">0</span>
     </label>
-    <input id="slider2" type="range" min="-3.14159265" max="3.14159265" value="0" step="0.01">
+    <input id="slider2" type="range" min="0.0" max="2.0" value="1" step="0.0001">
 
     <label>
         Slider 3: <span id="s3val">0</span>
