Added Emitter and Listener Spheres + Their Update Logic

--- a/index.html
+++ b/index.html
@@ -36,24 +36,68 @@
         <div></div>
     </div>
 
+    <div id="emitter-controls" style="margin-bottom: 20px;">
+        <h3>Emitter Position</h3>
+
+        <label>
+            Ex: <span id="ex_val">0</span>
+        </label>
+        <input id="ex_slider" type="range" min="0" max="128" value="0" step="0.01">
+
+        <label>
+            Ey: <span id="ey_val">0</span>
+        </label>
+        <input id="ey_slider" type="range" min="0" max="128" value="0" step="0.01">
+
+        <label>
+            Ez: <span id="ez_val">0</span>
+        </label>
+        <input id="ez_slider" type="range" min="0" max="128" value="0" step="0.01">
+    </div>
+
+    <div id="listener-controls">
+        <h3>Listener Position</h3>
+
+        <label>
+            Lx: <span id="lx_val">0</span>
+        </label>
+        <input id="lx_slider" type="range" min="0" max="128" value="0" step="0.01">
+
+        <label>
+            Ly: <span id="ly_val">0</span>
+        </label>
+        <input id="ly_slider" type="range" min="0" max="128" value="0" step="0.01">
+
+        <label>
+            Lz: <span id="lz_val">0</span>
+        </label>
+        <input id="lz_slider" type="range" min="0" max="128" value="0" step="0.01">
+    </div>
+
+
+    <div id="debug-sliders">
+        <h3>DEBUG SLIDERS</h3>
+
+        <label>
+            Lx: <span id="lx_val">0</span>
+        </label>
+        <input id="lx_slider" type="range" min="0" max="128" value="0" step="0.01">
+
+        <label>
+            Ly: <span id="ly_val">0</span>
+        </label>
+        <input id="ly_slider" type="range" min="0" max="128" value="0" step="0.01">
+
+        <label>
+            Lz: <span id="lz_val">0</span>
+        </label>
+        <input id="lz_slider" type="range" min="0" max="128" value="0" step="0.01">
+    </div>
 
 
 
-    
-    <label>
-        Slider 1: <span id="s1val">0</span>
-    </label>
-    <input id="slider1" type="range" min="0.0" max="128.0" value="0" step="0.0001">
 
-    <label>
-        Slider 2: <span id="s2val">0</span>
-    </label>
-    <input id="slider2" type="range" min="0.0" max="128.0" value="0" step="0.0001">
 
-    <label>
-        Slider 3: <span id="s3val">0</span>
-    </label>
-    <input id="slider3" type="range" min="0" max="128.0" value="0" step="0.01">
 </div>
 
 
