--- a/index.html
+++ b/index.html
@@ -89,26 +89,30 @@
             Lz: <span id="lz_val">0</span>
         </label>
         <input id="lz_slider" type="range" min="0" max="128" value="0" step="0.01">
+
+        <label>
+            VizSens: <span id="lsens_val">1</span>
+        </label>
+        <input id="lsens_slider" type="range" min="0" max="7" value="0" step="0.01">
     </div>
 
 
     <div id="debug-sliders">
         <h3>DEBUG SLIDERS</h3>
+        <label>
+            Lx: <span id="dx_val">0</span>
+        </label>
+        <input id="dx_slider" type="range" min="0" max="10" value="0" step="0.01">
 
         <label>
-            Lx: <span id="lx_val">0</span>
+            Ly: <span id="dy_val">0</span>
         </label>
-        <input id="lx_slider" type="range" min="0" max="128" value="0" step="0.01">
+        <input id="dy_slider" type="range" min="0" max="128" value="0" step="0.01">
 
         <label>
-            Ly: <span id="ly_val">0</span>
+            Lz: <span id="dz_val">0</span>
         </label>
-        <input id="ly_slider" type="range" min="0" max="128" value="0" step="0.01">
-
-        <label>
-            Lz: <span id="lz_val">0</span>
-        </label>
-        <input id="lz_slider" type="range" min="0" max="128" value="0" step="0.01">
+        <input id="dz_slider" type="range" min="0" max="128" value="0" step="0.01">
     </div>
 
 
