Absorbtion based on attenuation inside material, not bounce check

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
         <div id="graphsColumn">
             <div class="graphWindow">
-                <h3>Emitter Energy</h3>
+                <h3>Emitter Energy Vector</h3>
                 <canvas id="energyPlot1"></canvas>
             </div>
 
             <div class="graphWindow">
-                <h3>Room Transfer Function</h3>
+                <h3>Room Transmission Coefficients</h3>
                 <canvas id="energyPlot2"></canvas>
             </div>
         </div>
