Pretty graph + Fixed energy calculations

--- a/index.html
+++ b/index.html
@@ -23,14 +23,21 @@
         <div id="graphsColumn">
             <div class="graphWindow">
                 <h3>Emitter Energy Vector</h3>
-                <canvas id="energyPlot1"></canvas>
+
+                <div class="plotContainer">
+                    <canvas id="energyPlot1"></canvas>
+                </div>
             </div>
 
             <div class="graphWindow">
                 <h3>Room Transmission Coefficients</h3>
-                <canvas id="energyPlot2"></canvas>
+
+                <div class="plotContainer">
+                    <canvas id="energyPlot2"></canvas>
+                </div>
             </div>
         </div>
+
 
     </div>
 
