--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div class="graphWindow">
                 <div class="graphHeader">
-                    <h3>Room Transmission Coefficients</h3>
+                    <h3>Room Loss Coefficients</h3>
                     <div class="graphControls">
                         <button id="plot2_minus" class="graphBtn">−</button>
                         <button id="plot2_plus"  class="graphBtn">+</button>
