Added NCS files + Updated Graphs + Updated ReadMe

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="graphsColumn">
             <div class="graphWindow">
                 <div class="graphHeader">
-                    <h3>Emitter Energy Vector</h3>
+                    <h3>Emitter Energy Vector (X axis - Band centers [Hz], Y axis - Band energy)</h3>
                     <div class="graphControls">
                         <button id="plot1_minus" class="graphBtn">−</button>
                         <button id="plot1_plus"  class="graphBtn">+</button>
@@ -37,7 +37,7 @@
 
             <div class="graphWindow">
                 <div class="graphHeader">
-                    <h3>Room Loss Coefficients</h3>
+                    <h3>Room Loss Coefficients (X axis - Band centers [Hz], Y axis - Loss coefficients)</h3>
                     <div class="graphControls">
                         <button id="plot2_minus" class="graphBtn">−</button>
                         <button id="plot2_plus"  class="graphBtn">+</button>
